conclusão do teste

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "https://github.com/manejebem/webadmin-backend#readme",
   "dependencies": {
-    "knex-mariadb": "^2.0.0",
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.32",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
@@ -31,10 +31,12 @@
     "@types/validator": "^13.1.0",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
+    "knex-mariadb": "^2.0.0",
     "mariadb": "^2.4.2",
     "moment": "^2.29.1",
     "reflect-metadata": "^0.1.13",
